--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 <body>
     <div class="container btns">
         <div class="row">
-            <button class="beat1 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat2 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat3 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat4 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat1 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat2 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat3 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat4 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
         </div>
 
         <div class="row">
-            <button class="beat1 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat2 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat3 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat4 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat1 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat2 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat3 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat4 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
         </div>
 
         <div class="row">
-            <button class="beat1 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat2 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat3 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat4 beat col-3 col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat1 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat2 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat3 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="beat4 beat col-sm-3 col-lg-3 col-xl-3 col-xxl-3"></button>
         </div>
     </div>
 
