add styling to the grid

--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
 <body>
     <div class="container btns">
         <div class="row">
-            <button class="beat1 beat col-3"></button>
-            <button class="beat1 beat col-3"></button>
-            <button class="beat1 beat col-3"></button>
-            <button class="beat1 beat col-3"></button>
+            <button class="col beat1 beat"></button>
+            <button class="col beat2 beat"></button>
+            <button class="col beat3 beat"></button>
+            <button class="col beat4 beat"></button>
         </div>
 
         <div class="row">
-            <button class="beat1 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat2 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat3 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat4 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="col beat5 beat"></button>
+            <button class="col beat6 beat"></button>
+            <button class="col beat7 beat"></button>
+            <button class="col beat8 beat"></button>
         </div>
 
         <div class="row">
-            <button class="beat1 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat2 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat3 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat4 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="col beat9 beat"></button>
+            <button class="col beat10 beat"></button>
+            <button class="col beat11 beat"></button>
+            <button class="col beat12 beat"></button>
         </div>
 
         <div class="row">
-            <button class="beat1 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat2 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat3 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
-            <button class="beat4 beat col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3"></button>
+            <button class="col beat13 beat"></button>
+            <button class="col beat14 beat"></button>
+            <button class="col beat15 beat"></button>
+            <button class="col beat16 beat"></button>
         </div>
     </div>
 
