Add loop to the audio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>Launchpad</title>
 </head>
 
-<body>
+<body class="bg-dark">
+    <h1 class="launchpad">Launchpad</h1>
     <div class="container btns">
         <div class="row">
             <button class="col beat1 beat"></button>
