adding keyboard event listener

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 
 <body class="bg-dark">
     <h1 class="launchpad">Launchpad</h1>
+    <h2 class="heading-2 text-white text-center">Keyboard Keys</h2>
+    <div class="keyboard-keys">
+        <span>a</span>
+        <span>s</span>
+        <span>d</span>
+        <span>f</span>
+        <span>h</span>
+        <span>j</span>
+        <span>k</span>
+        <span>l</span>
+    </div>
     <div class="container btns">
         <div class="row">
             <button class="col beat1 beat"></button>
